# notesight

./: README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
diary/: elasticsearch_client.py  models.py  urls.py  views.py
diary/management/commands/: index_all_notes.py
diary/migrations/: 0001_initial.py
diary/services/: elasticsearch_service.py  llm_service.py
diary/templates/diary/: note_detail.html  note_insights.html  note_interface.html
diary/tests/: test_elasticsearch_service.py
notesight/: settings.py  urls.py  wsgi.py
src/: settings.py
src/services/: elasticsearch_service.py
tests/: test_elasticsearch_service.py  test_llm_service.py
