[project]
name = "notesight"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Felipe Siconha",email = "felipesiconha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "elasticsearch (>=8.17.2,<9.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "huggingface-hub (>=0.29.2,<0.30.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "pytest-django (>=4.10.0,<5.0.0)"
]

packages = [
    { include = "notesight" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
